syntax = "proto3";

import "status.proto";

option java_multiple_files = true;
option java_package = "org.huel.cloudhub.server.rpc.heartbeat";
option java_outer_classname = "HeartbeatProtos";

message BlockProperties {
  int32 block_size = 1;
  int32 block_limit = 2;
}

message Heartbeat {
  string host = 1;
  int32 port = 2;
  string id = 3;
  // when receive a response contains period from meta server,
  // the server should declare the period it now has.
  optional int32 period = 4;
  SerializedServerStatusCode status_code = 5;
  optional SerializedServerStatusReport status = 6;
}

message HeartbeatResponse {
  // when receive first heartbeat from file-server,
  // the meta server needs respond a standard period
  // for control.
  optional int32 period = 3;
  optional BlockProperties block_properties = 4;
  optional bool contains_stat_next = 5;
}

service HeartbeatService {
  rpc receiveHeartbeat(Heartbeat) returns (HeartbeatResponse);
}
