syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.huel.cloudhub.file.rpc.synchro";
option java_outer_classname = "SynchroProtos";

// TODO:

// container request
message SynchroRequest {

}

message SynchroResponse {

}

service SynchroService {
  rpc sendSynchro(SynchroRequest) returns (SynchroResponse);
}